fix jwt service for cors